--- a/index.html
+++ b/index.html
@@ -1,102 +1,269 @@
 <!DOCTYPE html>
-<html>
+<html lang="mr">
 
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
-  <title>Data Entry Form with File Upload</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+  <title>अमोल (बापू) बाळासाहेब शिंदे – समस्या नोंदणी फॉर्म</title>
+  <style>
+    :root {
+      --primary-color: #4a69bd;
+      --secondary-color: #1e3799;
+      --accent-color: #60a3bc;
+      --background-gradient: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    }
+
+    body {
+      background: var(--background-gradient);
+      min-height: 100vh;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    .hero.is-primary.is-bold {
+      background: linear-gradient(to right, #4a69bd, #1e3799);
+      margin-bottom: 2rem;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    }
+
+    .form-container {
+      background: rgba(255, 255, 255, 0.9);
+      backdrop-filter: blur(10px);
+      border-radius: 15px;
+      padding: 2.5rem;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+      margin-top: -3rem;
+      position: relative;
+      z-index: 10;
+      animation: fadeIn 0.8s ease-out;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .label {
+      color: #2c3e50;
+      font-weight: 600;
+      margin-bottom: 0.5rem;
+    }
+
+    .input,
+    .textarea {
+      border-radius: 8px;
+      border: 1px solid #dcdde1;
+      transition: all 0.3s ease;
+    }
+
+    .input:focus,
+    .textarea:focus {
+      border-color: var(--primary-color);
+      box-shadow: 0 0 0 0.125em rgba(74, 105, 189, 0.25);
+    }
+
+    .button.is-primary {
+      background-color: var(--primary-color);
+      border-radius: 8px;
+      font-weight: 600;
+      transition: all 0.3s ease;
+      height: 3rem;
+    }
+
+    .button.is-primary:hover {
+      background-color: var(--secondary-color);
+      transform: translateY(-2px);
+      box-shadow: 0 5px 15px rgba(30, 55, 153, 0.3);
+    }
+
+    .button.is-danger {
+      border-radius: 8px;
+      transition: all 0.3s ease;
+    }
+
+    .file-cta {
+      border-radius: 8px;
+      background-color: #f8f9fa;
+      border: 2px dashed #dcdde1;
+      transition: all 0.3s ease;
+    }
+
+    .file-input:focus~.file-cta {
+      border-color: var(--primary-color);
+    }
+
+    .description-text {
+      color: #576574;
+      font-size: 1.1rem;
+      line-height: 1.6;
+      margin-bottom: 2rem;
+      text-align: center;
+    }
+
+    .footer-note {
+      text-align: center;
+      margin-top: 2rem;
+      color: #8395a7;
+      font-size: 0.9rem;
+    }
+
+    @media screen and (max-width: 768px) {
+      .form-container {
+        padding: 1.5rem;
+        margin-top: -2rem;
+        margin-left: 1rem;
+        margin-right: 1rem;
+      }
+    }
+  </style>
 </head>
 
 <body>
-  <section class="hero is-primary is-bold">
+  <section class="hero is-primary is-bold is-medium">
     <div class="hero-body">
-      <div class="container">
-        <h1 class="title">Complaint Form / तक्रार फॉर्म</h1>
+      <div class="container has-text-centered">
+        <h1 class="title is-2">
+          अमोल (बापू) बाळासाहेब शिंदे
+        </h1>
+        <h2 class="subtitle is-4">
+          समस्या नोंदणी फॉर्म / Problem Registration Form
+        </h2>
       </div>
     </div>
   </section>
-  <form id="form" class="container m-4 pl-4">
-    <div class="field">
-      <label class="label">Name / नाव</label>
-      <div class="control">
-        <input class="input" type="text" placeholder="Enter Your Name / तुमचे नाव प्रविष्ट करा" name="Name" required />
-      </div>
-    </div>
-    <div class="field">
-      <label class="label">Age / वय</label>
-      <div class="control">
-        <input class="input" type="number" placeholder="Enter Your Age / तुमचे वय प्रविष्ट करा" name="Age" required />
-      </div>
-    </div>
-    <div class="field">
-      <label class="label">Mobile Number / मोबाईल नंबर</label>
-      <div class="control">
-        <input class="input" type="tel" placeholder="Enter Your Mobile Number / तुमचा मोबाईल नंबर प्रविष्ट करा"
-          name="Mobile Number" required />
-      </div>
-    </div>
-    <div class="field">
-      <label class="label">Address / पत्ता</label>
-      <div class="control">
-        <textarea class="textarea" placeholder="Enter Your Address / तुमचा पत्ता प्रविष्ट करा" name="Address" rows="2"
-          required></textarea>
-      </div>
-    </div>
-    <div class="field">
-      <label class="label">Work Address / कामाचा पत्ता</label>
-      <div class="control">
-        <textarea class="textarea" placeholder="Enter Your Work Address / तुमच्या कामाचा पत्ता प्रविष्ट करा"
-          name="Work Address" rows="2" required></textarea>
-      </div>
-    </div>
-    <div class="field">
-      <label class="label">Problem Description / समस्येचे वर्णन</label>
-      <div class="control">
-        <textarea class="textarea" placeholder="Describe the problem / समस्येचे वर्णन करा" name="Problem Description"
-          rows="3" required></textarea>
-      </div>
-    </div>
 
-    <div class="field">
-      <label class="label">Upload Image / प्रतिमा अपलोड करा</label>
-      <div class="control">
-        <div class="file has-name is-fullwidth">
-          <label class="file-label">
-            <input class="file-input" type="file" name="theFile" id="fileInput" accept="image/*" />
-            <span class="file-cta">
-              <span class="file-icon">
-                <i class="fas fa-upload"></i>
-              </span>
-              <span class="file-label"> Choose an image… / प्रतिमा निवडा… </span>
-            </span>
-            <span class="file-name" id="fileNameDisplay">
-              No image selected / कोणतीही प्रतिमा निवडलेली नाही
-            </span>
-          </label>
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-8">
+        <div class="form-container mb-6">
+          <p class="description-text">
+            हा फॉर्म समस्या नोंदणी व त्यावर कार्यवाही करण्यासाठी वापरण्यात येतो. <br>
+            कृपया समस्येची संपूर्ण माहिती द्या व संबंधित फोटो अपलोड करा.
+          </p>
+
+          <form id="form">
+            <div class="field">
+              <label class="label">Name / नाव</label>
+              <div class="control has-icons-left">
+                <input class="input" type="text" placeholder="तुमचे पूर्ण नाव प्रविष्ट करा" name="Name" required
+                  spellcheck="true" inputmode="text" />
+                <span class="icon is-small is-left">
+                  <i class="fas fa-user"></i>
+                </span>
+              </div>
+            </div>
+
+            <div class="columns">
+              <div class="column">
+                <div class="field">
+                  <label class="label">Age / वय</label>
+                  <div class="control has-icons-left">
+                    <input class="input" type="number" placeholder="तुमचे वय" name="Age" required inputmode="numeric"
+                      min="1" max="99" oninput="if(this.value.length > 2) this.value = this.value.slice(0, 2);" />
+                    <span class="icon is-small is-left">
+                      <i class="fas fa-calendar-alt"></i>
+                    </span>
+                  </div>
+                </div>
+              </div>
+              <div class="column">
+                <div class="field">
+                  <label class="label">Mobile Number / मोबाईल नंबर</label>
+                  <div class="control has-icons-left">
+                    <input class="input" type="tel" placeholder="तुमचा मोबाईल नंबर" name="Mobile Number" required
+                      inputmode="tel" pattern="[0-9]{10}" maxlength="10" minlength="10"
+                      oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 10);" />
+                    <span class="icon is-small is-left">
+                      <i class="fas fa-phone"></i>
+                    </span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="field">
+              <label class="label">Address / पत्ता</label>
+              <div class="control">
+                <textarea class="textarea" placeholder="तुमचा पूर्ण पत्ता प्रविष्ट करा" name="Address" rows="2" required
+                  spellcheck="true"></textarea>
+              </div>
+            </div>
+
+            <div class="field">
+              <label class="label">Work Address / कामाचा पत्ता</label>
+              <div class="control">
+                <textarea class="textarea" placeholder="तुमच्या कामाचा पत्ता प्रविष्ट करा" name="Work Address" rows="2"
+                  required spellcheck="true"></textarea>
+              </div>
+            </div>
+
+            <div class="field">
+              <label class="label">Problem Description / समस्येचे वर्णन</label>
+              <div class="control">
+                <textarea class="textarea" placeholder="समस्येचे सविस्तर वर्णन करा" name="Problem Description" rows="4"
+                  required spellcheck="true"></textarea>
+              </div>
+            </div>
+
+            <div class="field">
+              <label class="label">Upload Image / प्रतिमा अपलोड करा</label>
+              <div class="control">
+                <div class="file has-name is-fullwidth">
+                  <label class="file-label">
+                    <input class="file-input" type="file" name="theFile" id="fileInput" accept="image/*" />
+                    <span class="file-cta">
+                      <span class="file-icon">
+                        <i class="fas fa-cloud-upload-alt"></i>
+                      </span>
+                      <span class="file-label"> प्रतिमा निवडा (Choose Image) </span>
+                    </span>
+                    <span class="file-name" id="fileNameDisplay">
+                      No image selected
+                    </span>
+                  </label>
+                </div>
+              </div>
+            </div>
+
+            <input type="hidden" name="filename" id="actualFilename" />
+
+            <div class="field mt-6">
+              <div class="control">
+                <button class="button is-primary is-fullwidth" type="submit" id="submit-button">
+                  <span class="icon"><i class="fas fa-paper-plane"></i></span>
+                  <span>सबमिट करा / Submit</span>
+                </button>
+              </div>
+            </div>
+
+            <div class="field">
+              <div class="control">
+                <button class="button is-danger is-light is-fullwidth" type="button" id="cancel-button">
+                  रद्द करा / Cancel
+                </button>
+              </div>
+            </div>
+          </form>
+
+          <div id="message"
+            style="display: none; margin-top: 20px; padding: 15px; border-radius: 8px; font-weight: bold; text-align: center;">
+          </div>
+
+          <div class="footer-note">
+            मल गुगल शीटमध्ये समान नाव कॉन्फिगर करायचे आहे
+          </div>
         </div>
       </div>
     </div>
-    <input type="hidden" name="filename" id="actualFilename" />
-
-    <div class="field is-grouped">
-      <div class="control">
-        <button class="button is-primary" type="submit" id="submit-button">
-          Submit / सबमिट करा
-        </button>
-      </div>
-      <div class="control">
-        <button class="button is-danger" type="button" id="cancel-button">
-          Cancel / रद्द करा
-        </button>
-      </div>
-    </div>
-  </form>
-  <div id="message" style="
-        display: none;
-        margin: 20px;
-        padding: 10px;
-        border-radius: 4px;
-        font-weight: bold;
-      "></div>
+  </div>
 
   <script>
     const form = document.getElementById("form");
@@ -105,7 +272,6 @@
     const fileInput = document.getElementById("fileInput");
     const fileNameDisplay = document.getElementById("fileNameDisplay");
 
-    // Update displayed filename on file selection
     fileInput.addEventListener("change", function () {
       if (this.files && this.files.length > 0) {
         fileNameDisplay.textContent = this.files[0].name;
@@ -114,7 +280,6 @@
       }
     });
 
-    // Function to handle file upload
     async function uploadFile(file) {
       return new Promise((resolve, reject) => {
         const fr = new FileReader();
@@ -135,10 +300,10 @@
     form.addEventListener("submit", async function (e) {
       e.preventDefault();
 
-      messageDiv.textContent = "Submitting...";
+      messageDiv.textContent = "सबमिट होत आहे... (Submitting...)";
       messageDiv.style.display = "block";
-      messageDiv.style.backgroundColor = "beige";
-      messageDiv.style.color = "black";
+      messageDiv.style.backgroundColor = "#fff9db";
+      messageDiv.style.color = "#856404";
       submitButton.disabled = true;
       submitButton.classList.add("is-loading");
 
@@ -146,24 +311,19 @@
         const formData = new FormData(this);
         const formDataObj = {};
 
-        // Convert FormData to object
         for (let [key, value] of formData.entries()) {
           formDataObj[key] = value;
         }
 
-        // Handle file upload if a file is selected
         if (fileInput.files.length > 0) {
           const fileObj = await uploadFile(fileInput.files[0]);
-          // Rename file with user's name
           const userName = formDataObj.Name || "User";
           const sanitizedName = userName.replace(/\s+/g, '_');
           fileObj.fileName = `${sanitizedName}_${fileObj.fileName}`;
-          formDataObj.fileData = fileObj; // Add file data to form data
+          formDataObj.fileData = fileObj;
         }
 
-        // Submit form data
-        const scriptURL =
-          "https://script.google.com/macros/s/AKfycbwDG5Ws7Mlc8F0wkBkUrSeXRpT9YmDJaEqTHKDh37Au50Azm8l_dTn8GPiYTisu4I8T/exec";
+        const scriptURL = "https://script.google.com/macros/s/AKfycbz_iZ6O-FKBMjz4mCv43WpypN4MHmhXiaT6sVaB1r_XXS9tZ0tN55Rz7iNF_8xKYfbI/exec";
 
         const response = await fetch(scriptURL, {
           redirect: "follow",
@@ -177,8 +337,7 @@
         const data = await response.json();
 
         if (data.status === "success") {
-          messageDiv.textContent =
-            data.message || "Data submitted successfully!";
+          messageDiv.textContent = "माहिती यशस्वीरित्या जतन केली! (Data submitted successfully!)";
           messageDiv.style.backgroundColor = "#48c78e";
           messageDiv.style.color = "white";
           form.reset();
@@ -188,7 +347,7 @@
         }
       } catch (error) {
         console.error("Error:", error);
-        messageDiv.textContent = "Error: " + error.message;
+        messageDiv.textContent = "त्रुटी: " + error.message;
         messageDiv.style.backgroundColor = "#f14668";
         messageDiv.style.color = "white";
       } finally {
@@ -198,13 +357,11 @@
         setTimeout(() => {
           messageDiv.textContent = "";
           messageDiv.style.display = "none";
-        }, 4000);
+        }, 5000);
       }
     });
 
-    // Enhance cancel button to reset file input display
-    const cancelButton = form.querySelector("button.is-danger");
-    cancelButton.addEventListener("click", function () {
+    document.getElementById("cancel-button").addEventListener("click", function () {
       form.reset();
       fileNameDisplay.textContent = "No file selected";
       messageDiv.style.display = "none";
