--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     body {
       background: var(--background-gradient);
       min-height: 100vh;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Outfit', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      overflow-x: hidden;
     }
 
     .hero.is-primary.is-bold {
@@ -28,15 +29,16 @@
     }
 
     .form-container {
-      background: rgba(255, 255, 255, 0.9);
-      backdrop-filter: blur(10px);
-      border-radius: 15px;
-      padding: 2.5rem;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-      margin-top: -3rem;
+      background: rgba(255, 255, 255, 0.95);
+      backdrop-filter: blur(15px);
+      -webkit-backdrop-filter: blur(15px);
+      border-radius: 20px;
+      padding: 3rem;
+      box-shadow: 0 15px 40px rgba(0, 0, 0, 0.12);
+      margin-top: -4rem;
       position: relative;
       z-index: 10;
-      animation: fadeIn 0.8s ease-out;
+      animation: fadeIn 0.8s cubic-bezier(0.16, 1, 0.3, 1);
     }
 
     @keyframes fadeIn {
@@ -67,7 +69,8 @@
     .input:focus,
     .textarea:focus {
       border-color: var(--primary-color);
-      box-shadow: 0 0 0 0.125em rgba(74, 105, 189, 0.25);
+      box-shadow: 0 0 0 0.25em rgba(74, 105, 189, 0.15);
+      transform: translateY(-1px);
     }
 
     .button.is-primary {
@@ -111,26 +114,28 @@
     .footer-note {
       text-align: center;
       margin-top: 2rem;
-      color: #8395a7;
-      font-size: 0.9rem;
+      color: #7f8c8d;
+      font-size: 0.95rem;
+      font-weight: 500;
     }
 
     .social-sidebar {
       position: fixed;
-      left: 16px;
+      left: 20px;
       top: 50%;
       transform: translateY(-50%);
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 6px;
+      gap: 12px;
       z-index: 1000;
-      background: rgba(30, 30, 30, 0.75);
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
+      background: rgba(30, 30, 30, 0.85);
+      backdrop-filter: blur(12px);
+      -webkit-backdrop-filter: blur(12px);
       border-radius: 50px;
-      padding: 12px 8px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+      padding: 16px 10px;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
+      border: 1px solid rgba(255, 255, 255, 0.1);
     }
 
     .social-sidebar a {
@@ -167,25 +172,31 @@
 
     @media screen and (max-width: 768px) {
       .social-sidebar {
-        left: 10px;
+        left: 0;
+        right: 0;
         top: auto;
-        bottom: 6rem;
+        bottom: 0;
         transform: none;
-        padding: 8px 6px;
-        gap: 4px;
+        flex-direction: row;
+        justify-content: center;
+        border-radius: 0;
+        padding: 12px;
+        gap: 24px;
+        width: 100%;
+        background: rgba(30, 30, 30, 0.95);
+        border-top: 1px solid rgba(255, 255, 255, 0.1);
       }
 
       .social-sidebar a {
-        width: 32px;
-        height: 32px;
-        font-size: 0.95rem;
+        width: 40px;
+        height: 40px;
       }
     }
 
     .whatsapp-float {
       position: fixed;
-      top: 1rem;
-      right: 1rem;
+      top: 4rem;
+      right: 4rem;
       background-color: #25d366;
       color: white;
       border-radius: 50px;
@@ -209,10 +220,17 @@
 
     @media screen and (max-width: 768px) {
       .whatsapp-float {
-        top: 0.7rem;
-        right: 0.7rem;
-        padding: 0.5rem 0.9rem;
-        font-size: 0.8rem;
+        top: auto;
+        bottom: 4.5rem;
+        right: 2rem;
+        padding: 0.6rem 1.2rem;
+        font-size: 0.85rem;
+        box-shadow: 0 10px 25px rgba(37, 211, 102, 0.4);
+      }
+
+      .form-container {
+        padding: 1.5rem;
+        margin-top: -2rem;
       }
     }
   </style>
@@ -222,10 +240,10 @@
   <section class="hero is-primary is-bold is-medium">
     <div class="hero-body">
       <div class="container has-text-centered">
-        <h1 class="title is-2">
+        <h1 class="title is-2" style="letter-spacing: -0.5px;">
           अमोल (बापू) बाळासाहेब शिंदे
         </h1>
-        <h2 class="subtitle is-4">
+        <h2 class="subtitle is-4" style="opacity: 0.9;">
           समस्या नोंदणी फॉर्म / Problem Registration Form
         </h2>
       </div>
@@ -364,14 +382,16 @@
 
   <!-- Floating Social Sidebar (Left) -->
   <div class="social-sidebar">
-    <a href="https://www.facebook.com/share/16guxBNuxe/" target="_blank" class="fb" title="Facebook">
+    <a href="https://www.facebook.com/share/16guxBNuxe/" target="_blank" rel="noopener noreferrer" class="fb"
+      title="Facebook">
       <i class="fab fa-facebook-f"></i>
     </a>
-    <a href="https://www.instagram.com/amol_bapu_shinde_?igsh=bXdhOXltazl4NDA4" target="_blank" class="ig"
-      title="Instagram">
+    <a href="https://www.instagram.com/amol_bapu_shinde_?igsh=bXdhOXltazl4NDA4" target="_blank"
+      rel="noopener noreferrer" class="ig" title="Instagram">
       <i class="fab fa-instagram"></i>
     </a>
-    <a href="https://youtube.com/@amolbapushinde?si=EwhbiVq60nCHTLYu" target="_blank" class="yt" title="YouTube">
+    <a href="https://youtube.com/@amolbapushinde?si=EwhbiVq60nCHTLYu" target="_blank" rel="noopener noreferrer"
+      class="yt" title="YouTube">
       <i class="fab fa-youtube"></i>
     </a>
   </div>
@@ -388,12 +408,87 @@
     const fileInput = document.getElementById("fileInput");
     const fileNameDisplay = document.getElementById("fileNameDisplay");
 
-    fileInput.addEventListener("change", function () {
+    // Store the compressed file globally
+    let compressedFile = null;
+
+    // Helper: Compress Image
+    async function compressImage(file, { quality = 0.7, maxWidth = 1024 } = {}) {
+      return new Promise((resolve, reject) => {
+        const reader = new FileReader();
+        reader.readAsDataURL(file);
+        reader.onload = (event) => {
+          const img = new Image();
+          img.src = event.target.result;
+          img.onload = () => {
+            let width = img.width;
+            let height = img.height;
+            // Resize if too big
+            if (width > maxWidth) {
+              height = Math.round((height * maxWidth) / width);
+              width = maxWidth;
+            }
+            const canvas = document.createElement('canvas');
+            canvas.width = width;
+            canvas.height = height;
+            const ctx = canvas.getContext('2d');
+            ctx.drawImage(img, 0, 0, width, height);
+
+            canvas.toBlob((blob) => {
+              if (blob) {
+                // Create a new File object
+                const newFile = new File([blob], file.name, {
+                  type: 'image/jpeg',
+                  lastModified: Date.now(),
+                });
+                resolve(newFile);
+              } else {
+                reject(new Error('Canvas is empty'));
+              }
+            }, 'image/jpeg', quality);
+          };
+          img.onerror = (err) => reject(err);
+        };
+        reader.onerror = (err) => reject(err);
+      });
+    }
+
+    fileInput.addEventListener("change", async function () {
       const previewWrap = document.getElementById("imagePreviewWrap");
       const previewImg = document.getElementById("imagePreview");
+      const validTypes = ['image/jpeg', 'image/jpg', 'image/png', 'image/gif', 'image/webp'];
+
+      // Reset compressed file
+      compressedFile = null;
+
       if (this.files && this.files.length > 0) {
-        const file = this.files[0];
-        fileNameDisplay.textContent = file.name;
+        let file = this.files[0];
+
+        // 1. Validate File Type
+        if (!validTypes.includes(file.type)) {
+          alert("❌ अयोग्य फाइल फॉरमॅट! फक्त इमेज (JPG, PNG) अपलोड करा.\n(Invalid file format! Only images are allowed.)");
+          this.value = ""; // Clear input
+          fileNameDisplay.textContent = "कोणतीही प्रतिमा निवडली नाही (No image selected)";
+          previewWrap.style.display = "none";
+          previewImg.src = "";
+          return;
+        }
+
+        fileNameDisplay.textContent = "Processing... (कॉम्प्रेस करत आहे...)";
+
+        try {
+          // Attempt Detection of large files to compress
+          // We compress ALL images to ensure consistency and speed
+          const compressed = await compressImage(file);
+          console.log(`Original: ${(file.size / 1024).toFixed(2)}KB, Compressed: ${(compressed.size / 1024).toFixed(2)}KB`);
+          compressedFile = compressed;
+          file = compressed; // Use compressed for preview
+          fileNameDisplay.textContent = file.name;
+        } catch (err) {
+          console.error("Compression failed, using original", err);
+          // Fallback to original
+          fileNameDisplay.textContent = file.name;
+        }
+
         // Show image preview
         const reader = new FileReader();
         reader.onload = function (e) {
@@ -469,6 +564,24 @@
         return;
       }
 
+      // --- File Validation (Double Check) ---
+      if (fileInput.files.length > 0) {
+        // Check compressed file if available, else original
+        const file = compressedFile || fileInput.files[0];
+        const maxSize = 10 * 1024 * 1024; // 10MB
+        const validTypes = ['image/jpeg', 'image/jpg', 'image/png', 'image/gif', 'image/webp'];
+
+        if (!validTypes.includes(file.type)) {
+          showError("⚠️ फक्त इमेज फाइल्स (JPG, PNG) अपलोड करा. (Only image files allowed.)");
+          return;
+        }
+        if (file.size > maxSize) {
+          showError("⚠️ इमेजची साईझ 10MB पेक्षा कमी असावी. (Image size must be less than 10MB.)");
+          return;
+        }
+      }
+
+
       messageDiv.textContent = "⏳ सबमिट होत आहे, कृपया थांबा... (Submitting, please wait...)";
       messageDiv.style.display = "block";
       messageDiv.style.backgroundColor = "#fff9db";
@@ -485,8 +598,10 @@
           formDataObj[key] = value;
         }
 
-        if (fileInput.files.length > 0) {
-          const fileObj = await uploadFile(fileInput.files[0]);
+        if (fileInput.files.length > 0 || compressedFile) {
+          // Use compressed file if available, otherwise fallback to input
+          const fileToUpload = compressedFile || fileInput.files[0];
+          const fileObj = await uploadFile(fileToUpload);
           const userName = formDataObj.Name || "User";
           const sanitizedName = userName.replace(/\s+/g, '_');
           fileObj.fileName = `${sanitizedName}_${fileObj.fileName}`;
