--- a/index.html
+++ b/index.html
@@ -172,24 +172,21 @@
 
     @media screen and (max-width: 768px) {
       .social-sidebar {
-        left: 0;
-        right: 0;
-        top: auto;
-        bottom: 0;
-        transform: none;
-        flex-direction: row;
-        justify-content: center;
-        border-radius: 0;
-        padding: 12px;
-        gap: 24px;
-        width: 100%;
-        background: rgba(30, 30, 30, 0.95);
-        border-top: 1px solid rgba(255, 255, 255, 0.1);
+        left: 10px;
+        top: 55%;
+        bottom: auto;
+        transform: translateY(-50%);
+        padding: 10px 6px;
+        gap: 8px;
+        border-radius: 50px;
+        width: auto;
+        background: rgba(30, 30, 30, 0.85);
       }
 
       .social-sidebar a {
-        width: 40px;
-        height: 40px;
+        width: 34px;
+        height: 34px;
+        font-size: 1rem;
       }
     }
 
@@ -221,8 +218,10 @@
     @media screen and (max-width: 768px) {
       .whatsapp-float {
         top: auto;
-        bottom: 4.5rem;
-        right: 2rem;
+        bottom: 2rem;
+        left: 1.5rem;
+        right: auto;
+        transform: none;
         padding: 0.6rem 1.2rem;
         font-size: 0.85rem;
         box-shadow: 0 10px 25px rgba(37, 211, 102, 0.4);
@@ -230,7 +229,7 @@
 
       .form-container {
         padding: 1.5rem;
-        margin-top: -2rem;
+        margin-top: -2.5rem;
       }
     }
   </style>
@@ -382,16 +381,13 @@
 
   <!-- Floating Social Sidebar (Left) -->
   <div class="social-sidebar">
-    <a href="https://www.facebook.com/share/16guxBNuxe/" target="_blank" rel="noopener noreferrer" class="fb"
-      title="Facebook">
+    <a href="https://www.facebook.com/share/16guxBNuxe/" class="fb" title="Facebook">
       <i class="fab fa-facebook-f"></i>
     </a>
-    <a href="https://www.instagram.com/amol_bapu_shinde_?igsh=bXdhOXltazl4NDA4" target="_blank"
-      rel="noopener noreferrer" class="ig" title="Instagram">
+    <a href="https://www.instagram.com/amol_bapu_shinde_?igsh=bXdhOXltazl4NDA4" class="ig" title="Instagram">
       <i class="fab fa-instagram"></i>
     </a>
-    <a href="https://youtube.com/@amolbapushinde?si=EwhbiVq60nCHTLYu" target="_blank" rel="noopener noreferrer"
-      class="yt" title="YouTube">
+    <a href="https://youtube.com/@amolbapushinde?si=EwhbiVq60nCHTLYu" class="yt" title="YouTube">
       <i class="fab fa-youtube"></i>
     </a>
   </div>
