--- a/index.html
+++ b/index.html
@@ -381,18 +381,21 @@
 
   <!-- Floating Social Sidebar (Left) -->
   <div class="social-sidebar">
-    <a href="https://www.facebook.com/share/16guxBNuxe/" class="fb" title="Facebook">
+    <a href="https://www.facebook.com/share/16guxBNuxe/" class="fb" title="Facebook" target="_blank"
+      rel="noopener noreferrer">
       <i class="fab fa-facebook-f"></i>
     </a>
-    <a href="https://www.instagram.com/amol_bapu_shinde_?igsh=bXdhOXltazl4NDA4" class="ig" title="Instagram">
+    <a href="https://www.instagram.com/amol_bapu_shinde_?igsh=bXdhOXltazl4NDA4" class="ig" title="Instagram"
+      target="_blank" rel="noopener noreferrer">
       <i class="fab fa-instagram"></i>
     </a>
-    <a href="https://youtube.com/@amolbapushinde?si=EwhbiVq60nCHTLYu" class="yt" title="YouTube">
+    <a href="https://youtube.com/@amolbapushinde?si=EwhbiVq60nCHTLYu" class="yt" title="YouTube" target="_blank"
+      rel="noopener noreferrer">
       <i class="fab fa-youtube"></i>
     </a>
   </div>
 
-  <a href="https://wa.me/919923199499" class="whatsapp-float" target="_blank">
+  <a href="https://wa.me/919923199499" class="whatsapp-float" target="_blank" rel="noopener noreferrer">
     <i class="fab fa-whatsapp"></i>
     <span>Chat with us</span>
   </a>
